tests/nts_files/bad/triple_link.nts
.chipsets:
input i1
output o1
output o2

.links:
i1:1 o1:1 o2:1 #Fancy comment!
